; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/base/extr_devres.c_devm_kzalloc.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/base/extr_devres.c_devm_kzalloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }
%struct.devres = type { i8*, i32 }

@devm_kzalloc_release = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [21 x i8] c"devm_kzalloc_release\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @devm_kzalloc(%struct.device* %0, i64 %1, i32 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca %struct.device*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.devres*, align 8
  store %struct.device* %0, %struct.device** %5, align 8
  store i64 %1, i64* %6, align 8
  store i32 %2, i32* %7, align 4
  %9 = load i32, i32* @devm_kzalloc_release, align 4
  %10 = load i64, i64* %6, align 8
  %11 = load i32, i32* %7, align 4
  %12 = call %struct.devres* @alloc_dr(i32 %9, i64 %10, i32 %11)
  store %struct.devres* %12, %struct.devres** %8, align 8
  %13 = load %struct.devres*, %struct.devres** %8, align 8
  %14 = icmp ne %struct.devres* %13, null
  %15 = xor i1 %14, true
  %16 = zext i1 %15 to i32
  %17 = call i64 @unlikely(i32 %16)
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %20

19:                                               ; preds = %3
  store i8* null, i8** %4, align 8
  br label %33

20:                                               ; preds = %3
  %21 = load %struct.devres*, %struct.devres** %8, align 8
  %22 = getelementptr inbounds %struct.devres, %struct.devres* %21, i32 0, i32 1
  %23 = load i64, i64* %6, align 8
  %24 = call i32 @set_node_dbginfo(i32* %22, i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str, i64 0, i64 0), i64 %23)
  %25 = load %struct.device*, %struct.device** %5, align 8
  %26 = load %struct.devres*, %struct.devres** %8, align 8
  %27 = getelementptr inbounds %struct.devres, %struct.devres* %26, i32 0, i32 0
  %28 = load i8*, i8** %27, align 8
  %29 = call i32 @devres_add(%struct.device* %25, i8* %28)
  %30 = load %struct.devres*, %struct.devres** %8, align 8
  %31 = getelementptr inbounds %struct.devres, %struct.devres* %30, i32 0, i32 0
  %32 = load i8*, i8** %31, align 8
  store i8* %32, i8** %4, align 8
  br label %33

33:                                               ; preds = %20, %19
  %34 = load i8*, i8** %4, align 8
  ret i8* %34
}

declare dso_local %struct.devres* @alloc_dr(i32, i64, i32) #1

declare dso_local i64 @unlikely(i32) #1

declare dso_local i32 @set_node_dbginfo(i32*, i8*, i64) #1

declare dso_local i32 @devres_add(%struct.device*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
